--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,14 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+ul,li{
+  margin: 0;
+  list-style: none;
+}
+a{
+  text-decoration: none;
+}
+.auth-link{
+  text-decoration: underline;
+}
