--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,17 @@
         }
       }
   }
+  .main-section{
+    display: flex;
+    // align-items: baseline;
+    height: 100vh;
+    .sidebar-section{
+      width: 20%;
+      margin-right: 20px;
+      border: 2px solid #313131;
+      height: 100vh;
+    }
+  }
 
 }
 
