Dynamic sidebar menu added

--- a/src/routes/reset-password/reset-password.scss
+++ b/src/routes/reset-password/reset-password.scss
@@ -1,26 +1,16 @@
-.sign-up-page-wrapper{
+.login-page-wrapper{
     width: 500px;
     margin: 300px auto;
     span{
-        font-size: 12px;
-        margin-bottom: 5px;
-        display: block;
-        }
+    font-size: 12px;
+    margin-bottom: 5px;
+    display: block;
+    }
     .form-heading{
         color: #ec5990;
     }
-    .form-radio-button{
-        display: flex;
-        align-items: flex-start;
-        justify-content: flex-start;
-        input{
-           height: 20px;
-           width: 20px;
-           margin-right: 20px;
-        }
-    }
     input{
-        border: 1px solid rgb(70, 66, 66);
+    border: 1px solid rgb(70, 66, 66);
     border-radius: 4px;
     box-sizing: border-box;
     display: block;
