--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,12 @@ a{
 .auth-link{
   text-decoration: underline;
 }
-table, th, td {
-  border:1px solid black;
+
+
+table {
+  border-collapse: collapse;
+}
+th, td {
+  border: 1px solid black;
+  padding: 3px 10px;
 }
