--- a/src/shared/modal/modal.scss
+++ b/src/shared/modal/modal.scss
@@ -7,10 +7,11 @@
     position: absolute;
     background-color: rgb(235, 195, 18);
     width: 300px;
-    height: 100px;
+    height: 125px;
     z-index: 9999;
     top: -50px;
     left: 0;
     padding: 15px;
+    border-radius: 8px;
 }
 }
