--- a/src/shared/modal/modal.scss
+++ b/src/shared/modal/modal.scss
@@ -1,17 +1,21 @@
 .pop-wrapper{
     position: relative;
     background-color: white;
+    color: white;
 
 
 .pop-wrapper-child{
     position: absolute;
-    background-color: rgb(235, 195, 18);
+    background-color: rgb(4, 133, 214);
     width: 300px;
-    height: 125px;
+    height: 150px;
     z-index: 9999;
     top: -50px;
     left: 0;
     padding: 15px;
     border-radius: 8px;
+    h2{
+        margin-bottom: 0;
+    }
 }
 }
