--- a/src/routes/teacher-dashborad/edit-exam-details/edit-exam.scss
+++ b/src/routes/teacher-dashborad/edit-exam-details/edit-exam.scss
@@ -12,3 +12,31 @@
 .disable{
     opacity: 0.6;
 }
+
+input[type="radio"] {
+    display: inline-block;
+    height: 20px;
+    width: 50px;
+}
+
+input{
+    border: 1px solid rgb(70, 66, 66);
+    border-radius: 4px;
+    box-sizing: border-box;
+    display: block;
+    font-size: 16px;
+    margin: 10px 0;
+    padding: 6px 10px;
+    width: 180PX;
+    height: 42px;
+    
+
+    &:hover{
+        border: 1px solid #ec5990;
+    }
+}
+select{
+    height: 34px;
+    border-radius: 4px;
+    box-sizing: border-box;
+}
