--- a/src/shared/InputField/input-field.scss
+++ b/src/shared/InputField/input-field.scss
@@ -4,7 +4,7 @@ input{
     box-sizing: border-box;
     display: block;
     font-size: 16px;
-    margin-bottom: 10px;
+    margin: 10px;
     padding: 6px 10px;
     width: 100%;
     height: 42px;
@@ -12,4 +12,9 @@ input{
     &:hover{
         border: 1px solid #ec5990;
     }
+    }
+    input[type="radio" i]{
+        width: 20px;
+        height: 20px;
+        margin: 10px;
     }
