sign up validation logic correct

--- a/src/routes/forgot-password/forgot-password.scss
+++ b/src/routes/forgot-password/forgot-password.scss
@@ -9,6 +9,9 @@
     .form-heading{
         color: #ec5990;
     }
+    .message-green{
+        color: rgb(17, 123, 87);
+    }
     input{
     border: 1px solid rgb(70, 66, 66);
     border-radius: 4px;
