--- a/src/shared/modal/modal.scss
+++ b/src/shared/modal/modal.scss
@@ -1,19 +1,26 @@
 .pop-wrapper{
-    position: relative;
-    background-color: white;
     color: white;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    transform: scale(1.1);
+    transition: visibility 0s linear 0.25s, opacity 0.25s 0s, transform 0.25s;
 
 
 .pop-wrapper-child{
-    position: absolute;
     background-color: rgb(4, 133, 214);
-    width: 300px;
     height: 150px;
     z-index: 9999;
-    top: -50px;
-    left: 0;
-    padding: 15px;
-    border-radius: 8px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    padding: 1rem 1.5rem;
+    width: 24rem;
+    border-radius: 0.5rem;
     h2{
         margin-bottom: 0;
     }
