--- a/src/routes/reset-password/reset-password.scss
+++ b/src/routes/reset-password/reset-password.scss
@@ -1,4 +1,4 @@
-.login-page-wrapper{
+.reset-page-wrapper{
     width: 500px;
     margin: 300px auto;
     span{
@@ -30,5 +30,11 @@
         outline: none;
         border: none;
         cursor: pointer;
+    }
+    .success-message{
+        color: rgb(45, 149, 85);
+    }
+    .error-message{
+        color: red;
     }
 }
